frontend/infosafe_frontend/src/styling/Help.css
.helpBackground{
    background-color: #FFFFFF;
    border-radius: 4px;
    height: 90%;
    width: 98%;
    position: relative;
    margin: 0 auto;
}
.helpInfo{
    width: 90%;
    height: 80%;
    position: relative;
    top: 10%;
    left: 5%;
    font-family: 'Roboto', sans-serif;
    text-align: center;
    overflow-y: auto;
}
.helpTitle{
    font-size: 45px;
    color: black;
}
.helpSubTitle{
    font-size: 26px;
}
.helpData{
    font-size: 20px;
}

